<resources>
    <string name="app_name" translatable="false">Airo</string>
    <string name="aircraft_information">Aircraft Information</string>
    <string name="aircraft">Aircraft</string>
    <string name="seat_maps">Seat Maps</string>
    <string name="author">Author</string>
    <string name="empty" translatable="false" />
    <string name="add_flight">Add flight</string>
    <string name="no_api">API Key not found</string>
    <string name="invalid_api_network">Network error / Invalid API Key</string>
    <string name="no_flight">No flight found</string>
    <string name="check_in">Check-in</string>
    <string name="ins">in</string>
    <string name="ends_at">Ends</string>
    <string name="flying">Flying</string>
    <string name="now">Now</string>
    <string name="back">Back</string>
    <string name="ticket">Ticket</string>
    <string name="delete_dialog">Delete flight? This cannot be undone.</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="to">to</string>
    <string name="flight">Flight</string>
    <string name="terminal">Terminal</string>
    <string name="gate">Gate</string>
    <string name="my_flights">My flights</string>
    <string name="settings">Settings</string>
    <string name="flight_number">Flight number</string>
    <string name="apply_settings">Apply settings</string>
    <string name="api_key">API Key</string>
    <string name="seat">Seat</string>
    <string name="first_class">First Class</string>
    <string name="business_class">Business</string>
    <string name="premium_class">Premium Economy</string>
    <string name="economy_class">Economy</string>
    <string name="other">Other/Unknown</string>
    <string name="more">More</string>
    <string name="add_ticket">Add ticket</string>
    <string name="scan_barcode">Scan barcode</string>
    <string name="select_file">Select file</string>
    <string name="class_s">Class</string>
    <string name="passenger_name">Passenger name</string>
    <string name="switch_ticket">Switch ticket types</string>
    <string name="allow_camera_toast">Please allow camera permission</string>
    <string name="date">Date</string>
    <string name="invalid_pass">Invalid boarding pass</string>
    <string name="qrcode_desc">Ticket barcode</string>
    <string name="scan_promt">Scan boarding pass</string>
    <string name="info">Information</string>
    <string name="copy">Copy</string>
    <string name="copy_reference">Copy booking reference</string>
    <string name="warning">Warning</string>
    <string name="not_e_ticket">This ticket is not supported </string>
    <string name="no_ticket">No ticket found. Scan ticket with the add ticket button.</string>
    <string name="no_flight_smile">No flights :)</string>
    <string name="flight_exists">Flight already exists</string>
    <string name="airo_api_server">AiroAPI</string>
    <string name="api_endpoint">API Endpoint Url</string>
    <string name="direct_api">ADB</string>
    <string name="landing">Landing</string>
    <string name="landed">Landed</string>
    <string name="not_avail">Not available</string>
    <string name="upcoming_flights">Upcoming</string>
    <string name="past_flights">Past</string>
    <string name="delete_dialog_ticket">Delete ticket? This cannot be undone.</string>
    <string name="booking_reference">Booking reference</string>
    <string name="flight_alert_title">Prepare for flight in %1$s hours</string>
    <string name="get_ready">Get ready for flight</string>
    <string name="at">at</string>
    <string name="invalid_api_url">Invalid API URL</string>
    <string name="error_unknown">Unknown error</string>
    <string name="baggage_claim">Baggage claim</string>
    <string name="default_server" translatable="false">Default</string>
    <string name="default_server_extra">Server will default to https://airoapi.tuxy.stream/flights. This is only recommended for testing due to the limited API calls available.</string>
    <string name="adb_text">Refer to <a href='https://aerodatabox.com/'>https://aerodatabox.com/</a> for more information</string>
    <string name="update_error">Error occurred when updating</string>
    <string name="updating_flights">Updating flights…</string>
    <string name="refreshing_flight_data">Refreshing your flight data</string>
    <string name="flight_refresh_complete">Flight refresh complete</string>
    <string name="flight_refresh_complete_desc">%1$d flights updated</string>
    <string name="update_error_desc">Failed to refresh some flights</string>
    <string name="about">About</string>
    <string name="source_code" translatable="false">https://github.com/tuxy/airo</string>
    <string name="source_and_license">Source code &amp; Licenses</string>
    <string name="backup_and_restore">Backup &amp; Restore</string>
    <string name="backup_and_restore_desc">Manage backup location &amp; app data</string>
    <string name="locale_settings">Locale settings</string>
    <string name="locale_settings_desc">Date, time &amp; temperature formats</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_desc">Set alert &amp; notification offsets</string>
    <string name="api_settings">API Settings</string>
    <string name="api_settings_desc">Select API to use</string>
    <string name="backup_now">Backup now</string>
    <string name="restore_now">Restore now</string>
    <string name="time_setting">Use 24-hour time</string>
    <string name="temperature_setting">Use Fahrenheit instead (WIP)</string>
    <string name="american_date">Use American date</string>
    <string name="enable_flight_alerts">Enable flight alerts</string>
    <string name="flight_update">Flight update</string>
    <string name="has_updated">has updated its departure from</string>
    <string name="update_interval">Update interval (in hours)</string>
    <string name="flights">flights</string>
    <string name="no_transfer_time">No transfer</string>
    <string name="restore_warning">Warning: Restore will wipe all existing data!</string>
    <string name="last_updated">Last updated:</string>
    <string name="remove_background_optimisation">Remove background optimisation</string>
    <string name="remove_background_optimisation_extra">Airo needs to remove background optimisations for its notifications to work properly.</string>
    <string name="ignore">Ignore</string>
    <string name="allow">Allow</string>
    <string name="select_flight">Select a flight to view details</string>
    <string name="refresh_network_error">Network error. Please check your connection.</string>
    <string name="refresh_no_data">No flight data available</string>
</resources>
